# simplified_example

./: README.md  pyproject.toml  requirements.txt
