[tool.poetry]
name = "simplified_example"
version = "0.2.0"
description = "Exemplo de otimização simplificada."
authors = ["André Rocha <andre.rocha@enacom.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
